# pnnet

./: Makefile  PANN.cbp  PannConcept.txt  Project.cbp  ProjectHome.md  TODO  TODO.md  cmake_install.cmake
src/: ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  Cache.h  Includes.h  Link.h  Net.cpp  Net.h  Neuron.cpp  Neuron.h  Object.cpp  Object.h  ObjectTest.cpp  Runner.h  Test.cpp  TestNet.cpp  TestOMP.cpp  Type.h  Weight.h  lib.cpp  lib.h
src/Apps/: CMakeLists.txt
src/Apps/UnitTests/: CMakeLists.txt  TestBoost.cpp  TestBoostMPI.cpp  TestConvolutionalNetwork.cpp  TestImageIO.cpp  TestImg.cpp  TestLms.cpp  TestNet.cpp
src/Apps/article1/: Article1_learning.cpp  Article1_performance.cpp
src/Apps/article1_benchmarks/: Article1_learning.cpp  Article1_performance.cpp
src/Apps/article3/: Article3_ConvolutionNetworkDraftFaceFinder.cpp  CMakeLists.txt  RememberFaces.cpp  settings.txt
src/Apps/c3nn/: CMakeLists.txt  config.cpp  config.h  config.xml  main.cpp  util.cpp  util.h
src/Apps/c3nn/article3/: conv.log1_7  conv.log2_1  testc.py
src/Apps/gnuplot-cpp-demo/: CMakeLists.txt  example.cc
src/Apps/hybrid/: CMakeLists.txt  config.cpp  config.h  config.xml  main.cpp  net_list.xml  test.py  util.cpp
src/Apps/hybrid/cfg/: metadata.xml  net_list.xml
src/Apps/pann_viewer/: CMakeLists.txt  glwidget.cpp  glwidget.h
src/Core/: ActivationFunction.cpp  ActivationFunction.h  Cache.h  Exception.h  Includes.h  LMS.cpp  LMS.h  LearningAlgorithm.h  LearningHint.h  Link.h  Moo.h  MultilayerPerceptron.cpp  Net.cpp  Net.h  Neuron.cpp  Neuron.h  Object.cpp  Object.h  OpenGLHint.h  Runner.cpp  Runner.h  Storage.h  TrainData.cpp  Type.h  Util.h  Weight.h  pann.h
src/LearningAlgorithms/: GradientDescent.h  LearningAlgorithm.h
src/NetworkModels/: MultilayerPerceptron.cpp  MultilayerPerceptron.h
src/UnitTests/: CMakeLists.txt  TestBoost.cpp  TestLms.cpp  TestNet.cpp  TestSerialization.cpp
src/Utils/: CMakeLists.txt
src/Utils/pann_viewer/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  window.cpp  window.h
src/Utils/plotter/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/gnuplot-cpp/: CMakeLists.txt  gnuplot_i.cc
src/old_pann/ActivationFunctions/: TanH.h  Threshold.cpp
src/old_pann/Attributes/: WeightRandomizationAttributes.cpp
src/old_pann/Includes/: Python.h
src/pann/: CMakeLists.txt  pann.h  test.cpp
src/pann-shit/: ImageIo.cpp  ImageIo.h  LmsAlgorithm.h  TrainData.h  TrainDataGenerator.cpp  pann-shit.h
src/pann/ActivationFunctions/: ActivationFunction.h  All.h  Linear.cpp  Threshold.h
src/pann/Algorithms/: All.h  BackpropagationRunner.cpp  BackpropagationRunner.h  ErrorFunction.h  FeedforwardPropagationRunner.cpp  FeedforwardPropagationRunner.h  LearningAlgorithm.h  Lms.cpp  Lms.h  NullBackpropagationRunner.h  NullFeedforwardPropagationRunner.h  PyramidalNeuronFeedforwardRunner.h  RandomizeWeightsAccordingToInputsCount.cpp  RandomizeWeightsAccordingToInputsCount.h  RandomizeWeightsGauss.cpp  RandomizeWeightsGauss.h
src/pann/Attributes/: All.h  LmsAttributes.cpp  LmsAttributes.h
src/pann/Core/: ActivationFunction.cpp  ActivationFunction.h  All.h  Attribute.cpp  Attribute.h  Attributes.cpp  Attributes.h  Cache.h  Exception.cpp  Exception.h  Includes.h  LearningAlgorithm.h  Link.cpp  Link.h  Macros.h  Moo.cpp  Moo.h  Net.cpp  Net.h  NetCache.cpp  NetCache.h  Neuron.cpp  Neuron.h  NeuronFactory.cpp  NeuronFactory.h  Object.cpp  Object.h  OpenGlHint.h  Python.cpp  Random.cpp  Random.h  Runner.cpp  Runner.h  Singleton.h  Storage.cpp  Storage.h  Strategy.h  Tf.h  Type.h  Util.cpp  (+3 more)
src/pann/Core/Includes/: Std.h  (+1 more)
src/pann/Includes/: BoostCommon.h  BoostCommon.h_UNUSED  BoostSerialization.h  Python.h  Std.h
src/pann/LearningAlgorithms/: ErrorFunction.cpp  LearningAlgorithm.h  Lms.h
src/pann/NetworkModels/: ConvolutionalNetwork.cpp  ConvolutionalNetwork.h  ConvolutionalNetwork.h.todo  GCNN.cpp  MultilayerPerceptron.cpp  MultilayerPerceptron.h
src/pann/NetworkModels_move_to_python/: ConvolutionalNetwork.h
src/pann/NeuronFactories/: PyramidalNeuron.h
src/pann/Runners/: BackpropagationRunner.cpp  BackpropagationRunner.h  FeedforwardPropagationRunner.cpp  FeedforwardPropagationRunner.h  NullBackpropagationRunner.cpp  NullFeedforwardPropagationRunner.h  PyramidalNeuronFeedforwardRunner.h  RandomizeWeightsAccordingToInputsCountRunner.h  RandomizeWeightsGaussRunner.cpp  RandomizeWeightsGaussRunner.h
src/pann/TF/: Linear.h  TanH.h  Threshold.h
src/pann/TrainData/: Image.cpp  Image.h  ImageIo.cpp  ImageIo.h  Squash.h  TrainData.cpp  TrainData.h  TrainDataGenerator.cpp  TrainDataGenerator.h  TrainPattern.cpp  TrainPattern.h  TrainUtil.cpp  TrainUtil.h
src/pypann/: Tests.py
src/pypann/Core/: ActivationFunction.py  Exception.py  Link.py  Neuron.py  PyramidalNeuron.py
src/pypann/pypann/: __init__.py
src/sandbox/: main.cpp
trunk/src/: ActivationFunction.h  ActivationFunctionTest.cpp  CMakeLists.txt  Cache.h  Exception.h  Includes.h  Link.h  Net.cpp  Net.h  Neuron.cpp  Neuron.h  NeuronTest.cpp  Object.cpp  Object.h  Runner.h  Test.cpp  TestBoost.cpp  TestNet.cpp  TestOMP.cpp  Weight.h  lib.h  main.cpp
trunk/src/Apps/: CMakeLists.txt  TestLms.cpp  TestSerialization.cpp
trunk/src/Core/: ActivationFunction.cpp  ActivationFunction.h  Cache.h  Exception.h  Includes.h  LMS.cpp  LMS.h  LearningHint.cpp  LearningHint.h  Link.h  Moo.cpp  MultilayerPerceptron.cpp  Net.cpp  Net.h  NetPublicWrapper.cpp  NetPublicWrapper.h  NetworkModel.h  Neuron.cpp  Neuron.h  Object.cpp  Object.h  OpenGLHint.h  Runner.cpp  Runner.h  Storage.h  TrainData.cpp  TrainData.h  Type.h  Util.h  Weight.h  pann.h
trunk/src/NetworkModels/: MultilayerPerceptron.cpp  NetworkModel.h
trunk/src/UnitTests/: CMakeLists.txt  TestBoost.cpp  TestIntSize.cpp  TestLms.cpp  TestNet.cpp  TestSerialization.cpp
trunk/src/Utils/: CMakeLists.txt
trunk/src/old_pann/: CMakeLists.txt
trunk/src/pann/: CMakeLists.txt  pann.h
trunk/src/pann-shit/: CMakeLists.txt  ErrorFunction.cpp  ErrorFunction.h  LearningAlgorithm.h  LmsAlgorithm.h  TrainDataGenerator.h
trunk/src/pypann/: Tests.py
(+1607 files in other folders)
